fixing the background colour of the sidenav, and checking font size is legible

--- a/bookreviews/static/css/style.css
+++ b/bookreviews/static/css/style.css
@@ -75,3 +75,11 @@ p {
     object-fit: cover;
     border: 5px solid #FFFADE;
 }
+
+#mobile-demo {
+    background-color: #171F77;
+}
+
+.side {
+    font-size: 16px;
+}
